# android-ffmpeg

./: CMakeLists.txt  README.md  build.gradle  proguard-rules.pro
src/androidTest/java/com/ffmpegdummy/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: logger.h  native-lib_old.cpp  player-jni.cpp  player.cpp  player.h
src/main/cpp/include/libavformat/: avformat.h
src/main/java/com/ffmpegdummy/: FFmpegPlayer.java  MainActivity.java  VideoInfo.java  VideoSurfaceView.java
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml
src/test/java/com/ffmpegdummy/: ExampleUnitTest.java
